style.css
/* Work Sans font from Google font */
@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap");

/* shared styles */
* {
  font-family: "Work Sans", sans-serif;
  margin: 0;
  padding: 0;
}

.text-grey {
  color: #727272;
}

.title {
  color: #131313;
  text-align: center;
  font-size: 45px;
  font-weight: 700;
}

.btn-primary {
  color: #fff;
  background-color: #ff900e;
  border-radius: 8px;
  border: 0;
  font-size: 1.25rem;
  font-weight: 600;
  padding: 20px 25px;
  cursor: pointer;
}

/* header section styles */

header {
  background: rgba(255, 144, 14, 0.1);
  padding: 50px 240px;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav > ul {
  display: flex;
}

nav li {
  list-style: none;
  text-decoration: none;
  font-size: 1rem;
  margin-right: 30px;
  font-weight: 500;
}

nav li a {
  text-decoration: none;
  color: #424242;
}

/* banner styles */
.banner-content {
  max-width: 800px;
  text-align: center;
  margin: 0 auto;
}

.banner-title {
  font-size: 4rem;
  font-weight: 700;
  color: #131313;
}

.banner img {
  width: 100%;
  margin-top: 20px;
}

main {
  max-width: 1440px;
  margin: 70px auto;
}

/* featured styles */
.featured-container {
  display: flex;
  align-items: center;
}

.featured-gallery {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 24px;
}

.featured-content {
  padding: 0px 70px;
}

.featured-title {
  font-size: 45px;
}

.featured-title .quick-list {
  font-weight: 500;
}

.featured-title .text-feature {
  color: #ff900e;
  font-weight: 700;
}

/* more featured section styles */
.more-featured-container {
  margin-top: 130px;
  display: flex;
  gap: 145px;
}

.more-featured-img img{
    height: 90%;
    margin-left: 50px;
}
.more-featured-content .title{
    border-left: 5px solid #FF900E;
    padding-left: 20px;
}

.more-featured-card {
    padding: 30px;
    margin-bottom:20px;
  border-radius: 8px;
  background: #fff;
  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
}

.ten-years-button{
    border-radius: 8px;
    background: #FF900E;
    color: #fff;
    width: 342px;
    padding: 40px;
    text-align: center;
    position: relative;
    bottom: 100px;
}

.ten-years-button h2{
    font-size: 65px;
    margin: 0;
}

.ten-years-button p{
    color: #FFF;
font-size: 25px;
font-weight: 500;
line-height: 40px;
}

/* facts section styles */
.facts-card-container {
  display: flex;
  justify-content: space-around;
}

.card {
  border-radius: 8px;
  text-align: center;
  border: 1px solid #ff900e;
  padding: 30px;
  width: 150px;
}

.facts-card-container .card-stats {
  font-size: 2.8rem;
  color: #424242;
  margin: 10px 0px;
}

.facts-card-container .card-title {
  font-weight: 600;
  font-size: 1rem;
  margin-top: 5px;
}

/* sponsor section styles */
.sponsors-container {
  text-align: center;
}

.sponsors-img-gallery {
  display: flex;
  justify-content: space-evenly;
  margin-top: 50px;
  gap: 40px;
  align-items: center;
}

.sponsors-img-gallery img {
  width: 165px;
}

/* footer section styles */
.footer-content{
    border-radius: 8px;
background: #FFF4E7;
padding: 40px;
text-align: center;
}

.footer-content p{
    color: #424242;
}

/* responsive styles for small/mobile devices*/
@media screen and (max-width: 576px) {
  header {
    padding: 20px;
  }
  nav,
  .featured-container,
  .facts-card-container,
  .more-featured-container,
  .sponsors-img-gallery {
    flex-direction: column;
  }

  .more-featured-img img{
    width: 90%;
    margin-left: 0;
  }
  .ten-years-button{
    position: static;
    max-width: 300px;
  }
  .featured-gallery {
    grid-template-columns: 1fr;
  }
  .featured-content,
  .facts-card-container {
    padding: 0px 20px;
  }
  .facts-card-container {
    gap: 20px;
  }
}

/* responsive styles for medium/tablet devices*/
@media screen and (min-width: 577px) and (max-width: 960px) {
  header {
    padding: 50px;
  }
  nav,
  .featured-container,
  .more-featured-container,
  .sponsors-img-gallery {
    flex-direction: column;
  }
}

